[workspace]
members = [
    "DraggleNetClient",
    "DraggleNetServer"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
prost = "0.13.5"
tonic-build = "0.12.3"
prost-build = "0.13.5"
anyhow = "1.0.96"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
