[package]
name = "DraggleNetClient"
version = "0.1.0"
edition = "2024"
build = "../build.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }