[package]
name = "DraggleNetClient"
version = "0.1.0"
authors = ["Ben Lawrence <ben.lawrence0324@gmail.com>"]
edition = "2024"
build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
